# dragon-vm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md
benchmark/: bench-vm-call-native.cpp
build-test/: check-le-or-be.c  empty-dcx.dcx  generate-empty-dcx.cpp
docs/: abi.md  dasm-syntax.md  dvm-bytecode.md  dvm-executable-file.md  dvm-opcodes.md
experimental-memory/: memory.hpp  test.cpp
experimental-tests/calc-compiler/: calc.l  calc.y  gen-parser.sh  libdvm.h  y.tab.c
experimental-tests/threaded-interpretation/: benchmark_main.c  decode-dispatch-interpreter.h  threaded-interpreter.h  threaded_interpreter.c
experimental-tests/universal-memory/: memory.hpp
experimental/calc-compiler/: lex.yy.c  libdvm.h  main.c  y.tab.h
experimental/threaded-interpretation/: decode-dispatch-interpreter.c  opcodes.h  threaded-interpreter.c
experimental/universal-memory/: memory.hpp  test.cpp
headers/: config.hpp  dvm.hpp  stack.hpp  type.hpp  value.hpp
include/abi/: name.hpp  resolve.hpp
include/core/: config.hpp  debug.hpp  dvm.hpp  errorcodes.hpp  exceptions.hpp  heap.hpp  interpreter.hpp  memory.hpp  opcodes.hpp  stack.hpp  type.hpp  utils.hpp  vm_context.hpp  vm_register.hpp  vm_register_common.hpp  vm_register_offsets.hpp  vm_register_visitor.hpp
include/core/dcx/: byte_ordered_reader.hpp  dcx_file.hpp  dcx_file_info.hpp  dcx_linker.hpp  dcx_reader.hpp
include/core/interpreter/: interpreter.hpp  opcodes.hpp  vm_context.hpp  vm_register.hpp  vm_register_common.hpp  vm_register_offsets.hpp  vm_register_visitor.hpp
include/core/object/: array.hpp  basic_classes.hpp  box.hpp  class.hpp  method.hpp  object.hpp  reference.hpp  slot.hpp  type_id_converter.hpp  vm_class.hpp
include/core/platform/: dl.hpp  dl_commom.hpp
include/core/platform/unix/: dl_unix.hpp
include/core/platform/windows/: dl_windows.hpp
include/core/runtime/: callstack.hpp  context.hpp  dispatcher.hpp  dvm.hpp  interpreter.hpp  invoke.hpp  jump.hpp  math.hpp  opcodes.hpp  opcodes_def.hpp.inc  register.hpp  register_visitor.hpp  slot_detector.hpp  thread.hpp  throw.hpp  utils.hpp  vm_context.hpp  vm_register.hpp  vm_register_common.hpp  vm_register_visitor.hpp
include/dasm/: lexer.hpp
include/gc/: gc.hpp  gc_provider.hpp  pure_gc.hpp
src/: main.cpp
src/abi/: name.cpp  resolve.cpp
src/core/: config.cpp  heap.cpp  interpreter.cpp  memory.cpp  stack.cpp  vm-main.cpp  vm_register.cpp  vm_register_visitor.cpp
src/core/dcx/: dcx_file.cpp  dcx_linker.cpp  dcx_reader.cpp  reader_impl.cpp  reader_impl.hpp
src/core/interpreter/: interpreter.cpp  vm_context.cpp  vm_register.cpp  vm_register_visitor.cpp
src/core/object/: abs_method.cpp  abs_method.hpp  array.cpp  basic_classes.cpp  class.cpp  dvm_method.cpp  dvm_method.hpp  foreign_method.cpp  foreign_method.hpp  method.cpp  native_method.cpp  native_method.hpp  object.cpp  reference.cpp
src/core/platform/: dl.cpp
src/core/platform/unix/: dl_unix.cpp  dl_unix.hpp
src/core/platform/windows/: dl_windows.cpp
src/core/runtime/: context.cpp  dvm.cpp  interpreter.cpp  register.cpp  register_visitor.cpp  thread.cpp  throw.cpp  vm_context.cpp  vm_register.cpp  vm_register_visitor.cpp
src/dasm/: lexer.cpp  main.cpp
src/gc/: gc.cpp  pure_gc.cpp
test/: test-stack.cpp
tests/: test-array.cpp  test-boxing.cpp  test-byte-reader.cpp  test-dcx.cpp  test-gc.cpp  test-heap.cpp  test-interpreter.cpp  test-method.cpp  test-object.cpp  test-reference.cpp  test-register.cpp  test-stack.cpp  test-type.cpp  test-vm.cpp  test-vm_register.cpp
tools/: check-threaded.cpp  dvm-exec.cpp  generate-empty-dcx.cpp  generate-libdvm-h.cpp  generate-opcode-impl.cpp  generate-opcode-table.cpp
